Feat: 로그인 페이지 구글 로그인 완료 (#7)

--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -55,3 +55,26 @@
   color: #8B8B8B;
   font-weight: 400;
 }
+
+.loginGoogleBtn{
+  width: 254px;
+  height: 42px;
+  border-radius: 8px;
+  border: 1px solid #C4C4C4;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 25px;
+}
+
+.loginImg{
+  width: 24px;
+  height: 24px;
+  margin-right: 10px;
+}
+
+.loginSpan{
+  font-size: 17px;
+  font-weight: 400;
+}
