--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -78,3 +78,10 @@
   font-size: 17px;
   font-weight: 400;
 }
+
+.loginSignup{
+  color: #00A9FF;
+  font-size: 13px;
+  font-weight: 400;
+  margin-top: 22px;
+}
