--- a/src/pages/hospital/hospital.css
+++ b/src/pages/hospital/hospital.css
@@ -31,3 +31,18 @@
   width: 100px;
   margin-left: 10px;
 }
+
+.hospitalRecommend{
+  font-size: 28px;
+  font-weight: 700;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+/*hospitalList와 Item*/
+.hospitalMainImg{
+  width: 400px;
+  height: 300px;
+  flex-shrink: 0;
+  border-radius: 15px;
+}
