--- a/src/pages/hospital/hospital.css
+++ b/src/pages/hospital/hospital.css
@@ -40,9 +40,24 @@
 }
 
 /*hospitalList와 Item*/
+.hospitalItem{
+  width: 400px;
+  height: 360px;
+  border-radius: 15px;
+  border: 1px solid #E0E0E0;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  margin: 40px;
+}
+
 .hospitalMainImg{
   width: 400px;
   height: 300px;
   flex-shrink: 0;
   border-radius: 15px;
+}
+
+.hospitalName{
+  font-size: 16px;
+  font-weight: 700;
+  margin: 7px;
 }
