Feat: 병원 추천 페이지 병원 주소 (#30)

--- a/src/pages/hospital/hospital.css
+++ b/src/pages/hospital/hospital.css
@@ -59,5 +59,11 @@
 .hospitalName{
   font-size: 16px;
   font-weight: 700;
-  margin: 7px;
+  margin: 7px 0 0 10px;
+}
+
+.hospitalAddress{
+  font-size: 14px;
+  font-weight: 300;
+  margin: 10px 0 0 10px;
 }
