--- a/src/pages/hospital/hospital.css
+++ b/src/pages/hospital/hospital.css
@@ -49,11 +49,30 @@
   margin: 40px;
 }
 
+.hospitalInfo{
+  position: relative;
+}
+
 .hospitalMainImg{
   width: 400px;
   height: 300px;
   flex-shrink: 0;
   border-radius: 15px;
+}
+
+.hospitalEvalution{
+  display: flex;
+  position: absolute;
+  top: 7px;
+  right: 7px;
+  background-color: red;
+  color: white;
+  width: 50px;
+  height: 30px;
+  border-radius: 15px;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
 }
 
 .hospitalName{
