Feat: 추천 병원 전체 grid 배치 (2, 4개로 크기에 따라 분류) (#35)

--- a/src/pages/hospital/hospital.css
+++ b/src/pages/hospital/hospital.css
@@ -40,6 +40,15 @@
 }
 
 /*hospitalList와 Item*/
+.hospitalList {
+  display: grid;
+  grid-template-columns: repeat(4, 0fr);
+
+  @media screen and (max-width: 1024px) {
+    grid-template-columns: repeat(2, 0fr);
+  }
+}
+
 .hospitalItem{
   width: 400px;
   height: 360px;
