--- a/src/pages/hospital/hospitalDetail.css
+++ b/src/pages/hospital/hospitalDetail.css
@@ -1,12 +1,12 @@
 .hospitalDetailPage{
   display: flex;
   flex-direction: column;
-  align-items: center;
   margin-top: 50px;
 }
 
 .detailClassification{
   display: flex;
+  margin: 0 auto;
 }
 
 .detailhospitalLocation, .detailhospitalSymptom{
@@ -29,4 +29,13 @@
   display: flex;
   align-items: center;
   margin-left: 20px;
+}
+
+.detailhospitalInfo{
+  margin: 20px 446px;
+}
+
+.detailName{
+  font-size: 25px;
+  font-weight: 600;
 }
