Feat: 추천 병원 상세 좋아요 (#44)

--- a/src/pages/hospital/hospitalDetail.css
+++ b/src/pages/hospital/hospitalDetail.css
@@ -35,7 +35,29 @@
   margin: 20px 446px;
 }
 
+.detailinfo{
+  display: flex;
+  justify-content: space-between;
+}
+
 .detailName{
   font-size: 25px;
   font-weight: 600;
+  display: flex;
+  align-items: center;
+}
+
+.detailLike{
+  display: flex;
+  flex-direction: column;
+}
+
+.likeImg{
+  width: 30px;
+  height: 30px;
+}
+
+.likeNum{
+  text-align: center;
+  margin-top: 3px;
 }
