Feat: 추천 병원 리뷰 등록 버튼 (#56)

--- a/src/pages/hospital/review.css
+++ b/src/pages/hospital/review.css
@@ -46,3 +46,10 @@
   font-size: 17px;
   margin: 0 5px;
 }
+
+.reviewEnrollBtn{
+  background-color: #D2F7FF;
+  width: 180px;
+  height: 25px;
+  border-radius: 5px;
+}
