--- a/src/pages/hospital/review.css
+++ b/src/pages/hospital/review.css
@@ -72,7 +72,11 @@
   margin: 10px 0;
 }
 
-.reviewUserName{
+.reviewItemUserName{
   font-size: 17px;
   font-weight: 500;
+}
+
+.reviewItemEvaluation{
+  margin-left: 10px;
 }
